<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>cyclonedds</name>
    <version>0.11.0</version>
    <description>Eclipse Cyclone DDS is a very performant and robust open-source DDS implementation. Cyclone DDS is developed completely in the open as an Eclipse IoT project.</description>
    <maintainer email="cyclonedds-dev@eclipse.org">Eclipse Foundation, Inc.</maintainer>
    <license>Eclipse Public License 2.0</license>
    <license>Eclipse Distribution License 1.0</license>

    <url type="website">https://projects.eclipse.org/projects/iot.cyclonedds</url>
    <url type="bugtracker">https://github.com/eclipse-cyclonedds/cyclonedds/issues</url>
    <url type="repository">https://github.com/eclipse-cyclonedds/cyclonedds</url>

    <buildtool_depend>cmake</buildtool_depend>

    <build_depend>libssl-dev</build_depend>
    <exec_depend>openssl</exec_depend>

    <depend>iceoryx_binding_c</depend>
    <depend>iceoryx_posh</depend>
    <depend>iceoryx_hoofs</depend>
    <test_depend>libcunit-dev</test_depend>

    <doc_depend>doxygen</doc_depend>
    <doc_depend>python3-breathe</doc_depend>
    <doc_depend>python3-sphinx</doc_depend>

    <export>
        <build_type>cmake</build_type>
    </export>
</package>
